Software/essai_pinout/.metadata/.plugins/org.eclipse.cdt.ui/tests_hovercraft.build.log
16:11:56 **** Incremental Build of configuration Debug for project tests_hovercraft ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L412xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/moteur.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L412xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/moteur.d" -MT"Core/Src/moteur.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/moteur.o"
In file included from ../Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4xx.h:288,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_def.h:29,
                 from ../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rcc.h:27,
                 from ../Core/Inc/stm32l4xx_hal_conf.h:258,
                 from ../Core/Inc/moteur.h:11,
                 from ../Core/Src/moteur.c:8:
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:637:1: error: unknown type name 'HAL_StatusTypeDef'
  637 | HAL_StatusTypeDef HAL_Init(void);
      | ^~~~~~~~~~~~~~~~~
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:638:1: error: unknown type name 'HAL_StatusTypeDef'
  638 | HAL_StatusTypeDef HAL_DeInit(void);
      | ^~~~~~~~~~~~~~~~~
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:641:1: error: unknown type name 'HAL_StatusTypeDef'
  641 | HAL_StatusTypeDef HAL_InitTick (uint32_t TickPriority);
      | ^~~~~~~~~~~~~~~~~
../Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h:656:1: error: unknown type name 'HAL_StatusTypeDef'
  656 | HAL_StatusTypeDef  HAL_SetTickFreq(HAL_TickFreqTypeDef Freq);
      | ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/moteur.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

16:11:58 Build Failed. 6 errors, 0 warnings. (took 1s.347ms)

